[gd_scene load_steps=22 format=3 uid="uid://cxb7rpxgq61i"]

[ext_resource type="Script" path="res://scripts/Telainicio.gd" id="1_tj7fl"]
[ext_resource type="Texture2D" uid="uid://cgnsgmhrtopdn" path="res://Addons/Free/Artes_jogo/splash_tela.png" id="2_lre1o"]
[ext_resource type="Texture2D" uid="uid://dq0wp5m8shfe0" path="res://Addons/Free/Artes_jogo/kora's_adventure.png" id="3_heoj1"]
[ext_resource type="Script" path="res://Scripts/particula.gd" id="4_va77b"]
[ext_resource type="PackedScene" uid="uid://b13hionvld030" path="res://doce_prt.tscn" id="5_fr2g0"]
[ext_resource type="Theme" uid="uid://c2cr74a1jy35o" path="res://sair_btn.tres" id="5_r78tm"]
[ext_resource type="AudioStream" uid="uid://cst5v3njtrdjs" path="res://Addons/Free/Sons/Musica_splash.mp3" id="6_uxvmk"]
[ext_resource type="Theme" uid="uid://bkn0dftw8jsu3" path="res://comecar_btn.tres" id="7_3h0r3"]
[ext_resource type="Texture2D" uid="uid://b02x8voh7cxy1" path="res://Addons/Free/Artes_jogo/cadeado.png" id="7_bco6m"]
[ext_resource type="AudioStream" uid="uid://coj1gr4fggeap" path="res://Addons/Free/Sons/Trocadebot√£o.mp3" id="7_qbqnn"]
[ext_resource type="Texture2D" uid="uid://bcmeq6ljjnk2l" path="res://Addons/Free/Menu/Buttons/continuar_focus.png" id="7_shefo"]
[ext_resource type="Texture2D" uid="uid://df04cdreqmctj" path="res://Addons/Free/Menu/Buttons/continuar_normal.png" id="8_107t7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6h0bj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yibu1"]
content_margin_top = 15.0
texture = ExtResource("7_shefo")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_li7r5"]
content_margin_top = 15.0
texture = ExtResource("7_shefo")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y3kmu"]
content_margin_top = 15.0
texture = ExtResource("8_107t7")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bi2fx"]
content_margin_top = 15.0
texture = ExtResource("7_shefo")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_a7sn4"]
Button/styles/focus = SubResource("StyleBoxTexture_yibu1")
Button/styles/hover = SubResource("StyleBoxTexture_li7r5")
Button/styles/normal = SubResource("StyleBoxTexture_y3kmu")
Button/styles/pressed = SubResource("StyleBoxTexture_bi2fx")

[sub_resource type="Animation" id="Animation_a65uk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14.8235)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("K-A:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5do8t"]
resource_name = "anim_tela"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -14.8235)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("K-A:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.7, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.1, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3tuoj"]
_data = {
"RESET": SubResource("Animation_a65uk"),
"anim_tela": SubResource("Animation_5do8t")
}

[node name="Telainicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tj7fl")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 2
offset_top = -14.8235
offset_right = 1152.0
offset_bottom = 731.672
texture = ExtResource("2_lre1o")
expand_mode = 5

[node name="K-A" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 359.0
offset_top = 134.0
offset_right = 2359.0
offset_bottom = 1134.0
scale = Vector2(0.22, 0.22)
texture = ExtResource("3_heoj1")

[node name="Correcao" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 147.0
offset_right = 746.0
offset_bottom = 187.0
color = Color(0.972549, 0.878431, 0.796078, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="particula" type="Node2D" parent="."]
script = ExtResource("4_va77b")
object_templates = Array[PackedScene]([ExtResource("5_fr2g0")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 160
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="Button_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("7_3h0r3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = "                 "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="Button_continue" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_a7sn4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = "                 "

[node name="bloqueio" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Button_continue"]
position = Vector2(94, 25)
texture = ExtResource("7_bco6m")

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6h0bj")

[node name="Button_quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_r78tm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = " "

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3tuoj")
}
autoplay = "anim_tela"

[node name="som_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_uxvmk")
volume_db = -10.0
pitch_scale = 0.9
autoplay = true

[node name="troca_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qbqnn")
volume_db = -15.0

[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_start" to="." method="_on_button_start_focus_exited"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_start" to="." method="_on_button_start_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_start" to="." method="_on_button_start_pressed"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_continue" to="." method="_on_button_continue_focus_exited"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_continue" to="." method="_on_button_continue_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_focus_exited"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
